# auto_pm_tracker

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
data/: project_export.csv  project_schedule.db  project_schedule.db-shm  project_schedule.db-wal
frontend/: api_client.py  app.py  requirements.txt
frontend/pages/: 1_Dashboard.py  2_Schedule.py  3_Financials.py  4_Tasks.py  5_AI_Assistant.py
migrations/: env.py
migrations/versions/: 191200065746_add_phase2_columns.py  853db8178009_initial_master_schema.py
src/: cpm.py  database.py  demo_data.py  main.py  mcp_server.py  services.py
src/api/: app.py
src/api/routes/: financials.py  schedule.py  tasks.py
src/core/: config.py  db.py
src/models/: task.py
src/schemas/: financials.py  schedule.py  task.py
tests/: test_api.py
