[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_pm_tracker"
version = "0.1.0"
description = "An automated tracker for engineering project management."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pandas",
    "plotly",
    "mcp[cli]>=1.0.0",
    "starlette",
    "uvicorn",
]

[project.optional-dependencies]
api = [
    "fastapi[standard]>=0.100.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "python-multipart",
    "pydantic>=2.0.0",
]
frontend = [
    "streamlit",
    "httpx",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
pm-tracker = "src.main:app"
